--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/css.min.css" rel="stylesheet">
 <link href="css/css.min.css" rel="stylesheet" type="text/css">
-   <link href="pricing.css" rel="stylesheet">
+   <!-- <link href="pricing.css" rel="stylesheet"> -->
 
 
     <title> Home-CaptionTree </title>
