--- a/index.html
+++ b/index.html
@@ -137,12 +137,13 @@ bg-cherry{
         <a href="/docs/5.3/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
       </div>
   
+      
       <hr class="col-3 col-md-2 mb-5">
   
       <div class="row g-5">
         <div class="col-md-6">
-          <h2>Starter projects</h2>
-          <p>Ready to beyond the starter template? Check out these open source projects that you can quickly duplicate to a new GitHub repository.</p>
+          <h2>Join Tribe</h2>
+          <p>Join the best Tribe.</p>
           <ul class="icon-list ps-0">
             <li class="d-flex align-items-start mb-1"><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Bootstrap npm starter</a></li>
             <li class="text-muted d-flex align-items-start mb-1">Bootstrap Parcel starter (coming soon!)</li>
@@ -153,11 +154,11 @@ bg-cherry{
           <h2>Links</h2>
           <p></p>
           <ul class="icon-list ps-0">
-            <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/introduction/">Team & Attendance Sheet</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/webpack/">Bootstrap Webpack guide</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/parcel/">Bootstrap Parcel guide</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/vite/">Bootstrap Vite guide</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/contribute/">Contributing to Bootstrap</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="https://docs.google.com/spreadsheets/d/1ieLoHW_u5OEvozvksbdvcRH6p-ha90XkoXZuDVh9wRA/edit#gid=0">Team & Attendance Sheet</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/webpack/">link 1</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/parcel/">link 2</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/vite/">link 3</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/contribute/">link 4</a></li>
           </ul>
         </div>
       </div>
