--- a/index.html
+++ b/index.html
@@ -131,13 +131,12 @@ bg-cherry{
   
     <main>
       <h1>Get started with the Tribe</h1>
-      <p class="fs-5 col-md-8">Quickly and easily get started with Bootstrap's compiled, production-ready files with this barebones example featuring some basic HTML and helpful links. Download all our examples to get started.</p>
-  
+      <p class="fs-5 col-md-8">All the updates and links about the project will be available here. Coordinators: Ashwendh Chowdary & Priyanshu Jain.</p>
       <div class="mb-5">
-        <a href="/docs/5.3/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
+        <a href="https://docs.google.com/spreadsheets/d/1ieLoHW_u5OEvozvksbdvcRH6p-ha90XkoXZuDVh9wRA/edit#gid=0" class="btn btn-primary btn-lg px-4">Team & Attendance sheet</a>
       </div>
   
-      
+
       <hr class="col-3 col-md-2 mb-5">
   
       <div class="row g-5">
@@ -145,16 +144,23 @@ bg-cherry{
           <h2>Join Tribe</h2>
           <p>Join the best Tribe.</p>
           <ul class="icon-list ps-0">
-            <li class="d-flex align-items-start mb-1"><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Bootstrap npm starter</a></li>
-            <li class="text-muted d-flex align-items-start mb-1">Bootstrap Parcel starter (coming soon!)</li>
+            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/KFrmHfkDREg7cMkJdz31Zw" rel="noopener" target="_blank">Design Team</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/KOi5LF71P3I9GZ65OS9ILB" rel="noopener" target="_blank">Circuit Design Team</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/JNDGmf9mAbr96Vvn9PmTbR" rel="noopener" target="_blank">Reserach & Development Team</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/BATM6fJjUJVCB0XqT9Z1Bq" rel="noopener" target="_blank">Product Manager Team</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/Fh4KL8ORStODcvdzvqOBt4" rel="noopener" target="_blank">Documentation Team</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/J5cgSniYEdPJFgu4dTNvel" rel="noopener" target="_blank">IC Design Team</a></li>
+            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/GnB82f211tY6s2BnKJimVt" rel="noopener" target="_blank">Material selection Team</a></li>
+            
+            <li class="text-muted d-flex align-items-start mb-1">(coming soon!)</li>
           </ul>
         </div>
   
         <div class="col-md-6">
-          <h2>Links</h2>
+          <h2>Other Links</h2>
           <p></p>
           <ul class="icon-list ps-0">
-            <li class="d-flex align-items-start mb-1"><a href="https://docs.google.com/spreadsheets/d/1ieLoHW_u5OEvozvksbdvcRH6p-ha90XkoXZuDVh9wRA/edit#gid=0">Team & Attendance Sheet</a></li>
+            <!-- <li class="d-flex align-items-start mb-1"><a href="https://docs.google.com/spreadsheets/d/1ieLoHW_u5OEvozvksbdvcRH6p-ha90XkoXZuDVh9wRA/edit#gid=0">Team & Attendance Sheet</a></li> -->
             <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/webpack/">link 1</a></li>
             <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/parcel/">link 2</a></li>
             <li class="d-flex align-items-start mb-1"><a href="/docs/5.3/getting-started/vite/">link 3</a></li>
