--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@ bg-cherry{
   
     <main>
       <h1>Get started with the Tribe</h1>
-      <p class="fs-5 col-md-8">All the updates and links about the project will be available here. Coordinators: Ashwendh Chowdary & Priyanshu Jain.</p>
+      <p class="fs-5 col-md-8">All the updates and links about the project will be available here. <br>
+        <b>Coordinators</b> <br> Ashwendh Chowdary <br> Priyanshu Jain.</p>
       <div class="mb-5">
         <a href="https://docs.google.com/spreadsheets/d/1ieLoHW_u5OEvozvksbdvcRH6p-ha90XkoXZuDVh9wRA/edit#gid=0" class="btn btn-primary btn-lg px-4">Team & Attendance sheet</a>
       </div>
