--- a/index.html
+++ b/index.html
@@ -131,10 +131,9 @@ bg-cherry{
   
     <main>
       <h1>Get started with the Tribe</h1>
-      <p class="fs-5 col-md-8">All the updates and links about the project will be available here. <br>
-        <b>Coordinators</b> <br> Ashwendh Chowdary <br> Priyanshu Jain.</p>
+      <p class="fs-5 col-md-8">All the updates and links about the project will be available here.</p>
       <div class="mb-5">
-        <a href="https://docs.google.com/spreadsheets/d/1ieLoHW_u5OEvozvksbdvcRH6p-ha90XkoXZuDVh9wRA/edit#gid=0" class="btn btn-primary btn-lg px-4">Team & Attendance sheet</a>
+        <a href="https://docs.google.com/spreadsheets/d/1ieLoHW_u5OEvozvksbdvcRH6p-ha90XkoXZuDVh9wRA/edit#gid=0" class="btn btn-primary btn-lg px-4">Team</a>
       </div>
   
 
@@ -171,7 +170,15 @@ bg-cherry{
       </div>
     </main>
     <footer class="pt-5 my-5 text-muted border-top">
-      Created by Tarun · © 2023
+      <div class="row">
+      <div class="col-md-6">
+        <b>Coordinators</b> <br> Ashwendh Chowdary <br> Priyanshu Jain.
+      </div>
+       <div class="col-md-6">
+        <br>
+        Created by Tarun · © 2023
+       </div>
+      </div>
     </footer>
   </div>
 </div>
