--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@ bg-cherry{
     <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
       
       <img href="/" class="d-flex align-items-center text-dark text-decoration-none"> 
-        <img class="img_" src="media/icon.jpg" width="90"  alt="Avatar">   </img>
-        <h1>&nbsp; Na'avi Tribe</h1><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></img>
+        <img class="img_" src="media/icon.jpg" width="90"  alt="Avatar">>&nbsp;
+        <h1>Na'vi Tribe</h1><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></img>
         <span class="fs-4">&nbsp;@ ELP305</span>
       </a>
     </header>
@@ -142,15 +142,16 @@ bg-cherry{
       <div class="row g-5">
         <div class="col-md-6">
           <h2>Join Tribe</h2>
-          <p>Join the best Tribe.</p>
+          <p>Join the best Tribe. Contact coordinators to join in respective verticles.</p>
           <ul class="icon-list ps-0">
-            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/KFrmHfkDREg7cMkJdz31Zw" rel="noopener" target="_blank">Design Team</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/KOi5LF71P3I9GZ65OS9ILB" rel="noopener" target="_blank">Circuit Design Team</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/JNDGmf9mAbr96Vvn9PmTbR" rel="noopener" target="_blank">Reserach & Development Team</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/BATM6fJjUJVCB0XqT9Z1Bq" rel="noopener" target="_blank">Product Manager Team</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/Fh4KL8ORStODcvdzvqOBt4" rel="noopener" target="_blank">Documentation Team</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/J5cgSniYEdPJFgu4dTNvel" rel="noopener" target="_blank">IC Design Team</a></li>
-            <li class="d-flex align-items-start mb-1"><a href="https://chat.whatsapp.com/GnB82f211tY6s2BnKJimVt" rel="noopener" target="_blank">Material selection Team</a></li>
+            <li class="d-flex align-items-start mb-1">Design Team <a href="https://wa.me/9701966915" rel="noopener" target="_blank">@Tarun </a> <a href="https://wa.me/9310613453
+" rel="noopener" target="_blank">@Ayush</a></li>
+            <li class="d-flex align-items-start mb-1">Circuit Design Team  <a href="https://wa.me/7452835759" rel="noopener" target="_blank">@Aditya Mathur </a></li>
+            <li class="d-flex align-items-start mb-1">Reserach & Development Team  <a href="https://wa.me/7231819735" rel="noopener" target="_blank">@Nikita</a></li>
+            <li class="d-flex align-items-start mb-1">Product Manager Team  <a href="https://wa.me/7607039719" rel="noopener" target="_blank">@Pranjal</a></li>
+            <li class="d-flex align-items-start mb-1">Documentation Team  <a href="https://wa.me/9625100312" rel="noopener" target="_blank">@Dhruv</a></li>
+            <li class="d-flex align-items-start mb-1">IC Design Team  <a href="https://wa.me/8918158782" rel="noopener" target="_blank">@Anish</a></li>
+            <li class="d-flex align-items-start mb-1">Material selection Team  <a href="https://wa.me/63768335657" rel="noopener" target="_blank">@Neeraj</a> <a href="https://wa.me/7419070282" rel="noopener" target="_blank">@Jaideep</a></li>
             
             <li class="text-muted d-flex align-items-start mb-1">(coming soon!)</li>
           </ul>
