--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ bg-cherry{
 
       <hr class="col-3 col-md-2 mb-5">
   
-      <div class="row g-5">
-        <div class="col-md-6">
+      <div class="">
+        <div class="">
           <h2>Contact coordinators</h2>
           <p>Contact coordinator of verticals to join in particular vertical.</p>
           <ul class="icon-list ps-0">
@@ -158,7 +158,7 @@ bg-cherry{
           </ul>
         </div>
   
-        <div class="col-md-6">
+        <div class="">
           <h2>Other Links</h2>
           <p></p>
           <ul class="icon-list ps-0">
