--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ bg-cherry{
       <h1>Get started with the Tribe</h1>
       <p class="fs-5 col-md-8">All the updates and links about the project will be available here.</p>
       <div class="mb-5">
-        <a href="https://docs.google.com/spreadsheets/d/1djo_vxg3qqIjHg19L4kJL2bszZAs3TiW/edit?usp=sharing&ouid=105722398308179573223&rtpof=true&sd=true" class="btn btn-primary btn-lg px-4">Team</a>
+        <a href="https://docs.google.com/spreadsheets/d/1ieLoHW_u5OEvozvksbdvcRH6p-ha90XkoXZuDVh9wRA/edit?usp=sharing" class="btn btn-primary btn-lg px-4">Team & Participation Matrix</a>
       </div>
   
 
